--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
-# Copy from .env.local on the Vercel dashboard
-# https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
 
-# `openssl rand -base64 32`
-AUTH_SECRET=
+
+POSTGRES_URL="postgres://default:U05HfgoQqewr@ep-gentle-violet-/mydatabase"
+POSTGRES_PRISMA_URL="postgresql://default:U05HfgoQqewr@ep-gentle-violet-/mydatabase?"schema=public
+POSTGRES_URL_NON_POOLING="postgres://default:U05HfgoQqewr@ep-gentle-violet-/mydatabase?"pooling=false
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-gentle-violet"
+POSTGRES_PASSWORD="U05HfgoQqewr"
+POSTGRES_DATABASE="verceldb"
+
 AUTH_URL=http://localhost:3000/api/auth
